[metadata]
name = waifu2x-video-processor
version = 1.0
author = maciozo
description = Processes video frames through waifu2x, and outputs them to stdout.
long_description = Processes video frames through waifu2x, and outputs them to stdout. It does so without requiring the entire source file's frames to be extracted as an intermediate step.
license = GNU Affero General Public License v3

[options]
packages = waifu2x_video_processor
install_requires =
    psutil~=5.9.1

[options.entry_points]
console_scripts =
    waifu2x-video-processor = waifu2x_video_processor:_entry
